fix: z-index button up

--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,8 @@ img {
   width: 90px;
   height: 200px;
   padding: 15px;
-  margin: 100px 20px 20px 20px; }
+  margin: 100px 20px 20px 20px;
+  z-index: 999; }
   .button-up:hover {
     cursor: pointer; }
 
