--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -72,5 +72,6 @@ img
   height: 200px			
   padding: 15px
   margin: 100px 20px 20px 20px
+  z-index: 999
   &:hover
     cursor: pointer
